devops/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecom-prod
  labels:
    env: production
