devops/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-service
  namespace: ecom-prod
spec:
  selector:
    app: ecom-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
